--- a/index.html
+++ b/index.html
@@ -139,6 +139,26 @@
         transform: translateY(0);
       }
     }
+    .episode-toggle-button {
+        display: none; /* Hidden on desktop */
+        position: absolute;
+        bottom: 1rem;
+        right: 1rem;
+        background-color: rgba(0, 0, 0, 0.5);
+        color: white;
+        padding: 0.5rem 1rem;
+        border-radius: 9999px;
+        text-decoration: none;
+        font-size: 0.9rem;
+        z-index: 20;
+        border: 1px solid white;
+    }
+
+    @media (max-width: 768px) {
+        .episode-toggle-button {
+            display: block;
+        }
+    }
   </style>
 </head>
 <body class="player-page">
@@ -160,7 +180,6 @@
     <!-- Links -->
     <div class="nav-links" id="nav-links">
       <a href="#" onclick="switchTab('filmes')" id="filmes-tab" class="active">Filmes</a>
-      <a href="#" onclick="switchTab('series')" id="series-tab">Séries</a>
       <a href="#" onclick="switchTab('series')" id="series-tab">Séries</a>
       <a href="#" onclick="switchTab('tv')" id="tv-tab">TV ao Vivo</a>
       <!-- Botões mobile -->
@@ -217,9 +236,10 @@
   <div id="tv-player-container" style="display: none;">
     <div class="tv-container">
       <div class="video-main">
-        <div class="video-container" style="height:100vh;">
+        <div class="video-container" style="height:100vh; position: relative;">
           <a href="#" onclick="switchTab('filmes')" class="back-button">Voltar</a>
           <video id="tvPlayer" controls autoplay style="width: 100%; height: 100%;"></video>
+          <button id="toggle-channels-btn" class="episode-toggle-button">Canais</button>
         </div>
       </div>
       <aside id="channel-list-sidebar">
@@ -249,7 +269,7 @@
   </div>
 
   <!-- Movie Player Modal -->
-  <div id="movie-player-modal" class="modal" style="background-color: black;">
+  <div id="movie-player-modal" class="modal">
     <div class="video-container" style="width: 100%; height: 100%;">
       <a href="#" onclick="closeMoviePlayerModal()" class="back-button">Voltar</a>
       <video id="movieVideoPlayer" controls autoplay style="width: 100%; height: 100%;"></video>
