--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     .episode-toggle-button {
         display: none; /* Hidden on desktop */
         position: absolute;
-        bottom: 1rem;
+        top: 1rem;
         right: 1rem;
         background-color: rgba(0, 0, 0, 0.5);
         color: white;
