--- a/login.html
+++ b/login.html
@@ -133,15 +133,15 @@
                 <i class="fas fa-tv text-4xl"></i>
                 <h1>FastFlix</h1>
             </div>
-            <form id="login-form">
+            <form id="login-form" autocomplete="off">
                 <h2>Entrar</h2>
                 <div class="form-group">
                     <label for="login-username">Usuário</label>
-                    <input type="text" id="login-username" placeholder="Digite seu usuário" required>
+                    <input type="text" id="login-username" placeholder="Digite seu usuário" required autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label for="login-password">Senha</label>
-                    <input type="password" id="login-password" placeholder="Digite sua senha" required>
+                    <input type="password" id="login-password" placeholder="Digite sua senha" required autocomplete="off">
                 </div>
                 <div class="checkbox-group">
                     <input id="remember-me" name="remember-me" type="checkbox">
