--- a/index.html
+++ b/index.html
@@ -296,6 +296,17 @@
     </div>
   </div>
 
+  <!-- Protocol Warning Popup -->
+  <div id="protocol-warning-popup" class="modal" style="display: flex; align-items: center; justify-content: center;">
+    <div class="modal-content" style="max-width: 500px; padding: 2rem; text-align: center; background-color: #1f1f1f; border-radius: 8px; position: relative;">
+      <button id="close-protocol-warning" style="position: absolute; top: 10px; right: 10px; background: none; border: none; color: white; font-size: 1.5rem; cursor: pointer;">&times;</button>
+      <h2 class="text-2xl font-bold mb-4">Atenção!</h2>
+      <p class="mb-4">Você está acessando o site via HTTPS. Alguns canais ao vivo podem não funcionar devido a restrições de conteúdo misto do navegador.</p>
+      <p class="mb-4">Para uma melhor experiência, considere acessar via HTTP se o problema persistir.</p>
+      <p>Múltiplos links de acesso podem ser encontrados em nosso site oficial: <a href="http://fasthub.cloud" target="_blank" class="text-blue-400 hover:underline">fasthub.cloud</a></p>
+    </div>
+  </div>
+
   <!-- Expired Account Modal -->
   <div id="expired-account-modal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); color: white; flex-direction: column; align-items: center; justify-content: center; text-align: center; z-index: 2000;">
     <h2 class="text-3xl font-bold mb-4">Sua conta está expirada!</h2>
