--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
   </div>
 
   <!-- Protocol Warning Popup -->
-  <div id="protocol-warning-popup" class="modal" style="display: flex; align-items: center; justify-content: center;">
+  <div id="protocol-warning-popup" class="modal">
     <div class="modal-content" style="max-width: 500px; padding: 2rem; text-align: center; background-color: #1f1f1f; border-radius: 8px; position: relative;">
       <button id="close-protocol-warning" style="position: absolute; top: 10px; right: 10px; background: none; border: none; color: white; font-size: 1.5rem; cursor: pointer;">&times;</button>
       <h2 class="text-2xl font-bold mb-4">Atenção!</h2>
