--- a/profile.html
+++ b/profile.html
@@ -3,77 +3,197 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Perfil - FastFlix</title>
+    <title>Editar Perfil - FastFlix</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <style>
+        body {
+            background-color: #141414;
+        }
+        .profile-container {
+            max-width: 600px;
+            margin: 4rem auto;
+            padding: 2rem;
+        }
+        .profile-body {
+            display: flex;
+            gap: 1.5rem;
+            border-top: 1px solid #333;
+            border-bottom: 1px solid #333;
+            padding: 2rem 0;
+        }
+        .profile-icon-wrapper {
+            position: relative;
+            width: 120px;
+            height: 120px;
+            cursor: pointer;
+        }
+        .profile-icon-wrapper img {
+            width: 100%;
+            height: 100%;
+            border-radius: 4px;
+        }
+        .profile-icon-wrapper .edit-overlay {
+            position: absolute;
+            bottom: 5px;
+            right: 5px;
+            background-color: rgba(0,0,0,0.7);
+            border-radius: 50%;
+            padding: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .profile-details {
+            flex-grow: 1;
+        }
+        .profile-details input {
+            background-color: #333;
+            border: 1px solid #555;
+            padding: 0.75rem;
+            width: 100%;
+            border-radius: 2px;
+        }
+        .profile-actions button {
+            background-color: #fff;
+            color: #000;
+            border: none;
+            padding: 0.75rem 1.5rem;
+            font-weight: bold;
+            cursor: pointer;
+            margin-right: 1rem;
+            border-radius: 2px;
+        }
+        .profile-actions button.secondary {
+            background-color: transparent;
+            color: #aaa;
+            border: 1px solid #aaa;
+        }
+        .profile-actions button:hover {
+            background-color: #e50914;
+            color: #fff;
+        }
+        .profile-actions button.secondary:hover {
+            background-color: transparent;
+            color: #fff;
+            border-color: #fff;
+        }
+
+        /* Icon Modal Styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.8);
+        }
+        .modal-content {
+            background-color: #1f1f1f;
+            margin: 10% auto;
+            padding: 2rem;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 700px;
+            border-radius: 4px;
+        }
         .icon-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
-            gap: 1rem;
-            max-height: 50vh;
+            grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+            gap: 1.5rem;
+            max-height: 60vh;
             overflow-y: auto;
-            background-color: #2d3748; /* gray-800 */
-            padding: 1rem;
-            border-radius: 0.5rem;
         }
         .icon-item {
             cursor: pointer;
-            border: 3px solid transparent;
-            border-radius: 0.375rem; /* Alterado para cantos levemente arredondados */
+            border: 4px solid transparent;
+            border-radius: 4px;
             transition: border-color 0.3s;
-            overflow: hidden; /* Garante que a imagem interna não ultrapasse a borda */
+            overflow: hidden;
+        }
+        .icon-item:hover {
+            border-color: #fff;
         }
         .icon-item.selected {
-            border-color: #e53e3e; /* red-600 */
+            border-color: #e50914;
         }
         .icon-item img {
             width: 100%;
             height: auto;
-            display: block; /* Remove qualquer espaço extra abaixo da imagem */
+            display: block;
         }
     </style>
 </head>
-<body class="bg-gray-900 text-white">
+<body class="text-white">
 
-    <div class="navbar text-center">
-        <a href="index.html" class="text-blue-400 hover:underline">Voltar para o Início</a>
-    </div>
+    <div class="profile-container">
+        <h1 class="text-5xl font-bold mb-4">Editar Perfil</h1>
 
-    <div class="container mx-auto p-8 max-w-4xl">
-        <h1 class="text-4xl font-bold mb-8 text-center">Gerenciar Perfil</h1>
-
-        <!-- Profile General Settings -->
-        <div class="bg-gray-800 p-8 rounded-lg shadow-lg mb-8 text-center">
-            <h2 class="text-3xl font-bold mb-6">Configurações de Perfil</h2>
-            
-            <div class="mb-6">
-                <p class="text-lg font-medium text-gray-300 mb-2">Status da Conta: <span id="account-status" class="font-bold text-red-500"></span></p>
-                <p class="text-lg font-medium text-gray-300">Expira em: <span id="account-expiration" class="font-bold text-red-500"></span></p>
+        <div class="profile-body">
+            <!-- Profile Icon -->
+            <div id="current-profile-icon" class="profile-icon-wrapper">
+                <img id="current-icon-img" src="images/PROFILE_ICONS/Default.png" alt="Ícone do Perfil">
+                <div class="edit-overlay">
+                    <i class="fas fa-pencil-alt"></i>
+                </div>
             </div>
 
-            <h3 class="text-xl font-semibold mb-4 mt-6">Escolha seu Ícone</h3>
-            <div id="icon-selection-grid" class="icon-grid mb-4">
-                <!-- Icons will be populated by profile.js -->
+            <!-- Profile Details -->
+            <div class="profile-details space-y-6">
+                <div>
+                    <input type="text" id="username-input" placeholder="Nome de Usuário" disabled>
+                    <p class="text-xs text-gray-500 mt-1">O nome de usuário não pode ser alterado.</p>
+                </div>
+                <div class="border-t border-gray-700 pt-4">
+                    <h3 class="text-lg text-gray-400 mb-2">Status da Conta</h3>
+                    <p>Status: <span id="account-status" class="font-bold"></span></p>
+                    <p>Expira em: <span id="account-expiration" class="font-bold"></span></p>
+                </div>
             </div>
-            <p id="profile-message" class="text-center mt-2"></p>
         </div>
 
-        <!-- Change Password -->
-        <div class="bg-gray-800 p-8 rounded-lg shadow-lg">
-            <h2 class="text-3xl font-bold mb-6 text-center">Alterar Senha</h2>
-            <form id="change-password-form" class="space-y-4">
+        <!-- Action Buttons -->
+        <div class="profile-actions mt-8">
+            <button id="save-profile-btn">SALVAR</button>
+            <a href="index.html" class="inline-block">
+                <button type="button" class="secondary">CANCELAR</button>
+            </a>
+            <p id="profile-message" class="text-center mt-4 inline-block"></p>
+        </div>
+        
+        <!-- Change Password (kept from original) -->
+        <div class="mt-12 border-t border-gray-700 pt-8">
+            <h2 class="text-3xl font-bold mb-6">Alterar Senha</h2>
+            <form id="change-password-form" class="space-y-4 max-w-sm">
                 <div>
-                    <label for="new-password" class="block text-lg font-medium text-gray-300 mb-2">Nova Senha</label>
-                    <input type="password" id="new-password" placeholder="Digite a nova senha" class="w-full bg-gray-700 text-white p-4 rounded-md text-lg" required>
+                    <label for="new-password" class="block text-sm font-medium text-gray-400 mb-1">Nova Senha</label>
+                    <input type="password" id="new-password" class="w-full bg-gray-700 text-white p-3 rounded-md" required>
                 </div>
                 <div>
-                    <label for="confirm-password" class="block text-lg font-medium text-gray-300 mb-2">Confirmar Nova Senha</label>
-                    <input type="password" id="confirm-password" placeholder="Confirme a nova senha" class="w-full bg-gray-700 text-white p-4 rounded-md text-lg" required>
+                    <label for="confirm-password" class="block text-sm font-medium text-gray-400 mb-1">Confirmar Nova Senha</label>
+                    <input type="password" id="confirm-password" class="w-full bg-gray-700 text-white p-3 rounded-md" required>
                 </div>
-                <button type="submit" class="w-full bg-red-600 text-white font-bold py-4 px-4 rounded-md hover:bg-red-700 transition-colors text-lg">Alterar Senha</button>
+                <button type="submit" class="w-full bg-red-600 text-white font-bold py-3 px-4 rounded-md hover:bg-red-700 transition-colors">Alterar Senha</button>
                 <p id="password-message" class="text-center mt-2"></p>
             </form>
+        </div>
+    </div>
+
+    <!-- Icon Selection Modal -->
+    <div id="icon-modal" class="modal">
+        <div class="modal-content">
+            <h2 class="text-3xl font-bold mb-6">Escolha um ícone</h2>
+            <div id="icon-selection-grid" class="icon-grid">
+                <!-- Icons will be populated by profile.js -->
+            </div>
+             <div class="profile-actions mt-8">
+                <button id="confirm-icon-btn">OK</button>
+                <button id="cancel-icon-btn" class="secondary">CANCELAR</button>
+            </div>
         </div>
     </div>
 
